--- a/templates/charts/charts_edit_data.html
+++ b/templates/charts/charts_edit_data.html
@@ -30,6 +30,7 @@
   <td valign="top"><select name="type[#ID#]">
     <option value="spline">Spline
     <option value="column"[#if TYPE="column"#] selected[#endif#]>Column
+    <option value="area"[#if TYPE="area"#] selected[#endif#]>Area
    </select>
    </td>
   <td valign="top"><input type="text" name="linked_object[#ID#]" id="linked_object[#ID#]" value="[#LINKED_OBJECT#]"></td>
