--- a/templates/charts/charts_edit_data.html
+++ b/templates/charts/charts_edit_data.html
@@ -18,6 +18,7 @@
   <td><#LANG_TITLE#></td>
   <td><#LANG_UNIT#></td>
   <td><#LANG_TYPE#></td>
+  <td><#LANG_SETUP#></td>
   <td><#LANG_LINKED_OBJECT#></td>
   <td><#LANG_LINKED_PROPERTY#></td>
   <td><#LANG_PRIORITY#></td>
@@ -28,11 +29,24 @@
   <td valign="top"><input type="text" name="title[#ID#]" id="title[#ID#]" value="[#TITLE#]"></td>
   <td valign="top"><input type="text" name="unit[#ID#]" id="unit[#ID#]" value="[#UNIT#]"></td>
   <td valign="top"><select name="type[#ID#]">
+    [#if "<#HISTORY_DEPTH#>"!="0"#]
     <option value="spline">Spline
+    <option value="spline_min"[#if TYPE="spline_min"#] selected[#endif#]>Spline (no markers)
     <option value="column"[#if TYPE="column"#] selected[#endif#]>Column
     <option value="area"[#if TYPE="area"#] selected[#endif#]>Area
+	[#else#]
+	<option value="gauge">Gauge
+	<!--#
+	<option value="solidgauge"[#if TYPE="solidgauge"#] selected[#endif#]>Solid Gauge
+	#-->
+	[#endif#]
    </select>
    </td>
+  <td>
+  <a href="#" onClick='$("#settings[#ID#]").toggle();return false;'><#LANG_SHOW#></a>
+  <div id='settings[#ID#]' style="display:none">
+  <textarea name="settings[#ID#]">[#SETTINGS#]</textarea>
+  </div></td>
   <td valign="top"><input type="text" name="linked_object[#ID#]" id="linked_object[#ID#]" value="[#LINKED_OBJECT#]"></td>
   <td valign="top"><input type="text" name="linked_property[#ID#]" id="linked_property[#ID#]" value="[#LINKED_PROPERTY#]"></td>
   [#module name="linkedobject" object_field="linked_object<#PROPERTIES.ID#>" property_field="linked_property<#PROPERTIES.ID#>" method_field="linked_method<#PROPERTIES.ID#>" width="200"#]
