Multiple axis fix

--- a/templates/charts/action_usual.html
+++ b/templates/charts/action_usual.html
@@ -129,7 +129,7 @@ $(function () {
                                 enabled: false
                         },                      
                         [#endif#]
-              [#if MULTIPLE_AXIS="1"#]
+              [#if "<#MULTIPLE_AXIS#>"=="1"#]
               yAxis: [#NUM#],
               [#endif#]
               
