--- a/templates/charts/action_admin.html
+++ b/templates/charts/action_admin.html
@@ -6,6 +6,8 @@
   [#inc charts_search_admin.html#]
 <hr size="1">
 Usage: <b>&#091#module name="charts"#&#093</b>
+ or
+ Link: <b><a href="/module/charts.html" target="_blank">/module/charts.html</a></b>
 
  [#endif VIEW_MODE#]
  <!-- / table charts search -->
@@ -33,6 +35,8 @@ Usage: <b>&#091#module name="charts"#&#093</b>
 [#if ID!=""#]
 <hr size="1">
 Usage: <b>&#091#module name="charts" id="<#ID#>"#&#093</b> or <b>&#091#module name="charts" id="<#ID#>" width="100%" height="400" interval="3600"#&#093</b>
+ or
+ Link: <b><a href="/module/charts.html?id=<#ID#>" target="_blank">/module/charts.html?id=<#ID#></a></b>
 [#module name="charts" action="" id="<#ID#>"#]
 [#endif#]
 
