--- a/templates/charts/charts_edit_data.html
+++ b/templates/charts/charts_edit_data.html
@@ -34,9 +34,11 @@
     <option value="spline_min"[#if TYPE="spline_min"#] selected[#endif#]>Spline (no markers)
     <option value="column"[#if TYPE="column"#] selected[#endif#]>Column
     <option value="area"[#if TYPE="area"#] selected[#endif#]>Area
+    <option value="area_stack"[#if TYPE="area_stack"#] selected[#endif#]>Area (Stacking)
 	[#else#]
 	<option value="gauge">Gauge
 	<option value="solidgauge"[#if TYPE="solidgauge"#] selected[#endif#]>Solid Gauge
+    <option value="pie"[#if TYPE="pie"#] selected[#endif#]>Pie
 	[#endif#]
    </select>
    </td>
