--- a/templates/charts/action_usual.html
+++ b/templates/charts/action_usual.html
@@ -55,16 +55,39 @@ function requestData[#ID#]() {
  chartUpdateTimer<#ID#>=setTimeout('requestData[#ID#]();', <#INTERVAL#>*1000);
  return false;
 }
+
+function requestMultiData[#ID#]() {
+    //alert('load data!');
+    var url='<#ROOTHTML#>ajax/charts.html?id=<#ID#>&multi_data=1';
+    $.ajax({
+        url: url,
+        success: function(data) {
+            var obj=jQuery.parseJSON(data);
+            if (obj.RESULT=='OK') {
+                var history_count=obj.HISTORY.length;
+                if (history_count>0) {
+                    chart<#ID#>.series[0].setData(obj.HISTORY);
+                }
+            }
+        },
+        cache: false
+    });
+    chartUpdateTimer<#ID#>=setTimeout('requestMultiData[#ID#]();', <#INTERVAL#>*1000);
+return false;
+}
  
 
 
 $(function () { 
     [#if HISTORY_DEPTH!="0"#]
+
+    <!--# HISTORY #-->
+
     chart<#ID#> = new Highcharts.Chart({
         chart: {
             renderTo: 'container_<#ID#>',
-            type: 'spline',
-            zoomType: 'x',                      
+            type: '<#FIRST_TYPE#>',
+            zoomType: 'x',
             events: {
                 load: requestData[#ID#]
             }
@@ -138,9 +161,13 @@ $(function () {
                     enabled: true
                 }
             },
+
+            area: {
+                [#if "<#STACK#>"!=""#]stacking: 'normal',[#endif#]
+            },
             series: {
                 fillOpacity: 0.25
-            }
+            },
         },
         tooltip: {
             shared: true
@@ -163,10 +190,6 @@ $(function () {
               [#if "<#MULTIPLE_AXIS#>"=="1"#]
               yAxis: [#NUM#],
               [#endif#]
-              
-            // Define the data points. All series have a dummy year
-            // of 1970/71 in order to be compared on the same x axis. Note
-            // that in JavaScript, months start at 0 for January, 1 for February etc.
             data: []
         }[#if LAST!="1"#], [#endif#]
         [#end PROPERTIES#]
@@ -175,8 +198,10 @@ $(function () {
     });
         
         [#else HISTORY_DEPTH#]
-      
-        [#if FIRST_TYPE="gauge"#]
+
+    <!--# REALTIME #-->
+
+    [#if FIRST_TYPE="gauge"#]
     chart<#ID#> = new Highcharts.Chart({        
 
         chart: {
@@ -269,13 +294,10 @@ $(function () {
 
     }
         );      
-                [#endif FIRST_TYPE#]
+        [#endif FIRST_TYPE#]
                 
         [#if FIRST_TYPE="solidgauge"#]
-
-        
-        
-chart<#ID#> = new Highcharts.Chart({        
+chart<#ID#> = new Highcharts.Chart({
 
         chart: {
             type: '<#FIRST_TYPE#>',
@@ -361,7 +383,8 @@ credits: {
             dataLabels: {
                 format: '<div style="text-align:center"><span style="font-size:25px;color:' +
                     ((Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black') + '">{y}</span><br/>' +
-                       '<span style="font-size:12px;color:silver">[#UNIT#]</span></div>'
+                       '<span style="font-size:12px;color:silver">[#UNIT#]</span></div>',
+
             },
             tooltip: {
                 valueSuffix: ' [#UNIT#]'
@@ -376,7 +399,62 @@ credits: {
     }
         );      
         
-                [#endif FIRST_TYPE#]
+         [#endif FIRST_TYPE#]
+
+    [#if FIRST_TYPE="pie"#]
+    chart<#ID#> = new Highcharts.Chart({
+
+        chart: {
+            type: '<#FIRST_TYPE#>',
+            renderTo: 'container_<#ID#>',
+            events: {
+                load: requestMultiData[#ID#]
+}
+},
+    title: {
+        text: '[#TITLE#]'
+    },
+    [#if SUBTITLE!=""#]
+    subtitle: {
+        text: '<#SUBTITLE#>'
+    },
+    [#endif#]
+
+    credits: {
+        enabled: false
+    },
+
+    tooltip: {
+        pointFormat: '<b>{point.percentage:.1f}%</b>'
+    },
+
+    plotOptions: {
+        pie: {
+            allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                enabled: false
+            },
+            showInLegend: true,
+
+        }
+    },
+
+
+    series: [
+    {
+        name: '[#TITLE#]',
+        tooltip: {
+            valueSuffix: ' [#UNIT#]'
+        },
+        data: []
+    }
+    ]
+
+}
+    );
+
+    [#endif FIRST_TYPE#]
         
         [#endif HISTORY_DEPTH#]
 });
