--- a/templates/charts/action_admin.html
+++ b/templates/charts/action_admin.html
@@ -34,10 +34,10 @@ Usage: <b>&#091#module name="charts"#&#093</b>
 
 [#if ID!=""#]
 <hr size="1">
-Usage: <b>&#091#module name="charts" id="<#ID#>"#&#093</b> or <b>&#091#module name="charts" id="<#ID#>" width="100%" height="400" interval="3600"#&#093</b>
+Usage: <b>&#091#module name="charts" id="<#ID#>"#&#093</b> or <b>&#091#module name="charts" id="<#ID#>" width="100%" height="400" interval="3600"  enable_fullscreen="1"#&#093</b>
  or
  Link: <b><a href="/module/charts.html?id=<#ID#>" target="_blank">/module/charts.html?id=<#ID#></a></b>
-[#module name="charts" action="" id="<#ID#>"#]
+[#module name="charts" action="" id="<#ID#>" enable_fullscreen="1"#]
 [#endif#]
 
  [#endif VIEW_MODE#]
