--- a/templates/charts/action_usual.html
+++ b/templates/charts/action_usual.html
@@ -123,7 +123,6 @@ $(function () {
                 yAxis: [
                 [#begin PROPERTIES#]
                 { 
-                                [#if SETTINGS!=""#][#SETTINGS#],[#endif#]
             labels: {
                 format: '{value} [#UNIT#]',
                 style: {
@@ -136,6 +135,7 @@ $(function () {
                     color: Highcharts.getOptions().colors[[#NUM#]]
                 }
             }
+            [#if SETTINGS!=""#],[#SETTINGS#][#endif#]
             [#if OPPOSITE="1"#], opposite: true[#endif#]
         }[#if LAST!="1"#], [#endif#]
                 [#end PROPERTIES#]
@@ -144,7 +144,6 @@ $(function () {
                 yAxis: [
                 [#begin PROPERTIES#]
                 { 
-                                [#if SETTINGS!=""#][#SETTINGS#],[#endif#]
             labels: {
                 format: '{value} [#UNIT#]',
                 style: {
@@ -157,6 +156,7 @@ $(function () {
                     color: Highcharts.getOptions().colors[[#NUM#]]
                 }
             }
+            [#if SETTINGS!=""#],[#SETTINGS#][#endif#]
             [#if OPPOSITE="1"#], opposite: true[#endif#]
         }[#if LAST!="1"#], [#endif#]
                 [#end PROPERTIES#]
